--- a/templates/index.html
+++ b/templates/index.html
@@ -5,19 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Full Friends</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/server.css') }}">
 </head>
 <body>
     <h1>These are all my friends!</h1>
     
     {% for friend in friends %}
-    <p>First name: {{ friend['first_name'] }}</p> <br>
-    <p>Last name: {{ friend['last_name'] }}</p> <br>
-    <p>Occupation: {{ friend['occupation'] }}</p>
+    <p><span>First name: </span> {{ friend['first_name'] }}</p> <br>
+    <p><span>Last name: </span> {{ friend['last_name'] }}</p> <br>
+    <p><span>Occupation: </span> {{ friend['occupation'] }}</p>
     <hr>
     {% endfor %}
     
     <h1>Add a friend</h1>
-    <form action="/process">
+    <form action="/process" method="POST">
         <label for="first_name">First name: </label>
         <input type="text" name="first_name"> <br> <br>
         <label for="last_name">Last name: </label>
